2004-04-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/font-metric.cc (get_encoded_index): New function.

	* lily/include/font-metric.hh (coding_scheme): New method.

	* scm/encoding.scm: New file.

	* mf/feta-beugel.mf: Better error message (WAS: `foobar').

2004-04-05  Werner Lemberg  <wl@gnu.org>

	* Documentation/user/tutorial.itely: Revised (finished).

	* Documentation/user/macros.itexi (@separate): Removed.

2004-04-05  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/output-ps.scm (define-fonts): fix scaling.

	* lily/scaled-font-metric.cc (design_size): add function.

	* lily/font-metric.cc (LY_DEFINE): opps ly:font-design-size is only
	partial cut&paste of ly:font-magnification.

2004-04-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-ps.scm (define-fonts):
	(fontify): Update.

2004-04-04  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* po/fr.po: update.

	* po/nl.po: update

	* mf/feta-beugel.mf: document why design size is not fixed.

	* mf/feta-braces-a.mf: rename to stress that it's not design size.

2004-04-04  Werner Lemberg  <wl@gnu.org>

	* Documentation/user/tutorial.itely: Revised (continued).

2004-04-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* po/nl.po: Update (backportme).

2004-04-03  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* po/de.po: update.

	* scm/output-tex.scm (font-command): use ly: functions to
	construct name.
	(define-fonts): don't use alist, just dump \font definitions.
	(font-load-command): calculate proper scaling by taking
	outputscale from paper argument.

	* lily/stencil-scheme.cc (fontify_atom): insert Font_metric into
	expression.

	* lily/paper-outputter.cc (output_header): pass paper arg to
	define-fonts

	* lily/paper-def.cc (font_descriptions): dump list of
	Scaled_font_metrics
	(find_scaled_font): take Font_metric argument, store
	Scaled_font_metrics in hash-table containing (size ->
	Scaled_font_metrics) alist.
	(get_dimension): rename from get_realvar

	* lily/font-metric.cc (LY_DEFINE): ly:font-design-size,